Correct cleaned_data files.

--- a/analyses/customer_analysis/analysis.ipynb
+++ b/analyses/customer_analysis/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "0"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,12 +168,12 @@
       "1424        16292   9758568      DE   104409015  Accessories  Accessories   \n",
       "1425        16324   6088950     RoW   114404956  Accessories  Accessories   \n",
       "\n",
-      "     purchase_date currency  value_of_item  rate  gbp_value_of_item  \n",
-      "1351    07/08/2019      GBP          51.00   1.0              51.00  \n",
-      "1386    07/08/2019      GBP           8.00   1.0               8.00  \n",
-      "1418    07/08/2019      GBP          90.00   1.0              90.00  \n",
-      "1424    02/08/2019      GBP         158.99   1.0             158.99  \n",
-      "1425    01/08/2019      GBP          34.00   1.0              34.00  \n"
+      "     purchase_date currency  value_of_item  rate  \n",
+      "1351    07/08/2019      GBP          51.00   1.0  \n",
+      "1386    07/08/2019      GBP           8.00   1.0  \n",
+      "1418    07/08/2019      GBP          90.00   1.0  \n",
+      "1424    02/08/2019      GBP         158.99   1.0  \n",
+      "1425    01/08/2019      GBP          34.00   1.0  \n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "[69 rows x 3 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "4    02/08/2019      AUD           25.0  1.799521          44.988025  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,336 +472,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>purchase_id</th>\n",
-       "      <th>buyer_id</th>\n",
-       "      <th>country</th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>department</th>\n",
-       "      <th>category</th>\n",
-       "      <th>purchase_date</th>\n",
-       "      <th>currency</th>\n",
-       "      <th>value_of_item</th>\n",
-       "      <th>rate</th>\n",
-       "      <th>gbp_value_of_item</th>\n",
-       "      <th>gender_x</th>\n",
-       "      <th>membership_length_x</th>\n",
-       "      <th>age_group_x</th>\n",
-       "      <th>gender_y</th>\n",
-       "      <th>membership_length_y</th>\n",
-       "      <th>age_group_y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>10258663</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>113961581</td>\n",
-       "      <td>Accessories</td>\n",
-       "      <td>Accessories</td>\n",
-       "      <td>02/08/2019</td>\n",
-       "      <td>AUD</td>\n",
-       "      <td>15.00</td>\n",
-       "      <td>1.799521</td>\n",
-       "      <td>26.992815</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>30-40</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>30-40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6</td>\n",
-       "      <td>9135670</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>114780505</td>\n",
-       "      <td>Accessories</td>\n",
-       "      <td>Accessories</td>\n",
-       "      <td>02/08/2019</td>\n",
-       "      <td>AUD</td>\n",
-       "      <td>33.50</td>\n",
-       "      <td>1.799521</td>\n",
-       "      <td>60.283953</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>50-60</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>50-60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9</td>\n",
-       "      <td>10869093</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>115216176</td>\n",
-       "      <td>Accessories</td>\n",
-       "      <td>Accessories</td>\n",
-       "      <td>07/08/2019</td>\n",
-       "      <td>AUD</td>\n",
-       "      <td>65.00</td>\n",
-       "      <td>1.799521</td>\n",
-       "      <td>116.968865</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>30-40</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>30-40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>27</td>\n",
-       "      <td>10182131</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>112217251</td>\n",
-       "      <td>Accessories</td>\n",
-       "      <td>Accessories</td>\n",
-       "      <td>02/08/2019</td>\n",
-       "      <td>AUD</td>\n",
-       "      <td>40.00</td>\n",
-       "      <td>1.799521</td>\n",
-       "      <td>71.980840</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>50-60</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>50-60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>31</td>\n",
-       "      <td>5766224</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>107519551</td>\n",
-       "      <td>Accessories</td>\n",
-       "      <td>Accessories</td>\n",
-       "      <td>02/08/2019</td>\n",
-       "      <td>AUD</td>\n",
-       "      <td>25.00</td>\n",
-       "      <td>1.799521</td>\n",
-       "      <td>44.988025</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>40-50</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>40-50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>217972</th>\n",
-       "      <td>237648</td>\n",
-       "      <td>8976914</td>\n",
-       "      <td>US</td>\n",
-       "      <td>104140177</td>\n",
-       "      <td>Womens apparel</td>\n",
-       "      <td>Tops - Womens</td>\n",
-       "      <td>01/08/2019</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>25.00</td>\n",
-       "      <td>1.215902</td>\n",
-       "      <td>30.397550</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>60+</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>60+</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>217973</th>\n",
-       "      <td>237652</td>\n",
-       "      <td>14613754</td>\n",
-       "      <td>US</td>\n",
-       "      <td>108341706</td>\n",
-       "      <td>Womens apparel</td>\n",
-       "      <td>Tops - Womens</td>\n",
-       "      <td>01/08/2019</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>34.00</td>\n",
-       "      <td>1.215902</td>\n",
-       "      <td>41.340668</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>30-40</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>30-40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>217974</th>\n",
-       "      <td>237656</td>\n",
-       "      <td>14802292</td>\n",
-       "      <td>US</td>\n",
-       "      <td>111754118</td>\n",
-       "      <td>Womens apparel</td>\n",
-       "      <td>Tops - Womens</td>\n",
-       "      <td>07/08/2019</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>13.75</td>\n",
-       "      <td>1.215902</td>\n",
-       "      <td>16.718653</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>30-40</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>30-40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>217975</th>\n",
-       "      <td>237657</td>\n",
-       "      <td>15041454</td>\n",
-       "      <td>US</td>\n",
-       "      <td>102065527</td>\n",
-       "      <td>Womens apparel</td>\n",
-       "      <td>Tops - Womens</td>\n",
-       "      <td>07/08/2019</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>15.00</td>\n",
-       "      <td>1.215902</td>\n",
-       "      <td>18.238530</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>30-40</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>30-40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>217976</th>\n",
-       "      <td>237663</td>\n",
-       "      <td>15117974</td>\n",
-       "      <td>US</td>\n",
-       "      <td>114848270</td>\n",
-       "      <td>Womens apparel</td>\n",
-       "      <td>Tops - Womens</td>\n",
-       "      <td>01/08/2019</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>44.75</td>\n",
-       "      <td>1.215902</td>\n",
-       "      <td>54.411614</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>60+</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>60+</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>217977 rows × 17 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        purchase_id  buyer_id country  product_id      department  \\\n",
-       "0                 3  10258663      AU   113961581     Accessories   \n",
-       "1                 6   9135670      AU   114780505     Accessories   \n",
-       "2                 9  10869093      AU   115216176     Accessories   \n",
-       "3                27  10182131      AU   112217251     Accessories   \n",
-       "4                31   5766224      AU   107519551     Accessories   \n",
-       "...             ...       ...     ...         ...             ...   \n",
-       "217972       237648   8976914      US   104140177  Womens apparel   \n",
-       "217973       237652  14613754      US   108341706  Womens apparel   \n",
-       "217974       237656  14802292      US   111754118  Womens apparel   \n",
-       "217975       237657  15041454      US   102065527  Womens apparel   \n",
-       "217976       237663  15117974      US   114848270  Womens apparel   \n",
-       "\n",
-       "             category purchase_date currency  value_of_item      rate  \\\n",
-       "0         Accessories    02/08/2019      AUD          15.00  1.799521   \n",
-       "1         Accessories    02/08/2019      AUD          33.50  1.799521   \n",
-       "2         Accessories    07/08/2019      AUD          65.00  1.799521   \n",
-       "3         Accessories    02/08/2019      AUD          40.00  1.799521   \n",
-       "4         Accessories    02/08/2019      AUD          25.00  1.799521   \n",
-       "...               ...           ...      ...            ...       ...   \n",
-       "217972  Tops - Womens    01/08/2019      USD          25.00  1.215902   \n",
-       "217973  Tops - Womens    01/08/2019      USD          34.00  1.215902   \n",
-       "217974  Tops - Womens    07/08/2019      USD          13.75  1.215902   \n",
-       "217975  Tops - Womens    07/08/2019      USD          15.00  1.215902   \n",
-       "217976  Tops - Womens    01/08/2019      USD          44.75  1.215902   \n",
-       "\n",
-       "        gbp_value_of_item gender_x  membership_length_x age_group_x gender_y  \\\n",
-       "0               26.992815        F                  0.1       30-40        F   \n",
-       "1               60.283953        F                  0.2       50-60        F   \n",
-       "2              116.968865        F                  0.4       30-40        F   \n",
-       "3               71.980840        F                  0.2       50-60        F   \n",
-       "4               44.988025        F                  0.2       40-50        F   \n",
-       "...                   ...      ...                  ...         ...      ...   \n",
-       "217972          30.397550        F                  0.2         60+        F   \n",
-       "217973          41.340668        F                  0.3       30-40        F   \n",
-       "217974          16.718653        F                  0.1       30-40        F   \n",
-       "217975          18.238530        F                  0.2       30-40        F   \n",
-       "217976          54.411614        F                  0.3         60+        F   \n",
-       "\n",
-       "        membership_length_y age_group_y  \n",
-       "0                       0.1       30-40  \n",
-       "1                       0.2       50-60  \n",
-       "2                       0.4       30-40  \n",
-       "3                       0.2       50-60  \n",
-       "4                       0.2       40-50  \n",
-       "...                     ...         ...  \n",
-       "217972                  0.2         60+  \n",
-       "217973                  0.3       30-40  \n",
-       "217974                  0.1       30-40  \n",
-       "217975                  0.2       30-40  \n",
-       "217976                  0.3         60+  \n",
-       "\n",
-       "[217977 rows x 17 columns]"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "abt = abt_trans = pd.merge(left=abt_trans, right=cust_data, how=\"left\", on=\"buyer_id\")\n",
     "# abt"
@@ -809,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
