EDA on purchase date

--- a/analyses/customer_analysis/analysis.ipynb
+++ b/analyses/customer_analysis/analysis.ipynb
@@ -489,6 +489,36 @@
     "abt.to_csv('cleaned_data/abt.csv', encoding='utf-8', index=False)\n",
     "abt_trans.to_csv('cleaned_data/abt_trans.csv', encoding='utf-8', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['02/08/2019', '07/08/2019', '03/08/2019', '01/08/2019',\n",
+       "       '06/08/2019', '04/08/2019', '05/08/2019'], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abt.purchase_date.unique()\n",
+    "\n",
+    "# 01/08/2019 = Thursday\n",
+    "# 02/08/2019 = Friday\n",
+    "# 03/08/2019 = Saturday\n",
+    "# 04/08/2019 = Sunday\n",
+    "# 05/08/2019 = Monday\n",
+    "# 06/08/2019 = Tuesday\n",
+    "# 07/08/2019 = Wednesday\n",
+    "# 03/08/2019 = Saturday"
+   ]
   }
  ],
  "metadata": {
