--- a/analyses/customer_analysis/analysis.ipynb
+++ b/analyses/customer_analysis/analysis.ipynb
@@ -519,6 +519,68 @@
     "# 07/08/2019 = Wednesday\n",
     "# 03/08/2019 = Saturday"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Accessories', 'Beauty', 'Mens apparel', 'Womens apparel', 'Home',\n",
+       "       'Jewellery', 'Kids', 'Shoes', 'Tech'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abt.department.unique()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                category      department\n",
+      "0            Accessories     Accessories\n",
+      "20690             Beauty          Beauty\n",
+      "81942               Home            Home\n",
+      "85336          Jewellery       Jewellery\n",
+      "99893               Kids            Kids\n",
+      "28926     Bottoms - Mens    Mens apparel\n",
+      "113246  Outerwear - Mens    Mens apparel\n",
+      "141930       Tops - Mens    Mens apparel\n",
+      "117320             Shoes           Shoes\n",
+      "138654              Tech            Tech\n",
+      "34629   Bottoms - Womens  Womens apparel\n",
+      "63681            Dresses  Womens apparel\n",
+      "101989          Lingerie  Womens apparel\n",
+      "107135         Outerwear  Womens apparel\n",
+      "174012     Tops - Womens  Womens apparel\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat_dep = abt[['category', 'department']].drop_duplicates().sort_values(by=['department', 'category'])\n",
+    "#.size().reset_index(name='count').sort_values(by=['category', 'department'], ascending=[True, False])\n",
+    "print(cat_dep)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
