Describe abt data

--- a/analyses/customer_analysis/analysis.ipynb
+++ b/analyses/customer_analysis/analysis.ipynb
@@ -580,6 +580,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "abt.head(), abt.info(), abt.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
