Add further analyses

--- a/analyses/customer_analysis/analysis.ipynb
+++ b/analyses/customer_analysis/analysis.ipynb
@@ -589,7 +589,90 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Demographic Breakdown: Gender, Age Group, Membership Length\n",
+    "\n",
+    "# Grouping by gender, age group, and membership length to analyze purchase patterns\n",
+    "gender_analysis = data.groupby('gender')['gbp_value_of_item'].agg(['count', 'sum', 'mean'])\n",
+    "age_group_analysis = data.groupby('age_group')['gbp_value_of_item'].agg(['count', 'sum', 'mean'])\n",
+    "membership_length_analysis = data.groupby(pd.cut(data['membership_length'], bins=[0, 1, 5, 10, 15]))['gbp_value_of_item'].agg(['count', 'sum', 'mean'])\n",
+    "\n",
+    "# Display the results\n",
+    "gender_analysis, age_group_analysis, membership_length_analysis\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analyze the demographic breakdown based on gender and age group\n",
+    "gender_distribution = data['gender'].value_counts()\n",
+    "age_group_distribution = data['age_group'].value_counts()\n",
+    "\n",
+    "# Plot the distribution of purchases by gender and age group\n",
+    "fig, axs = plt.subplots(1, 2, figsize=(14, 6))\n",
+    "\n",
+    "# Gender distribution\n",
+    "axs[0].pie(gender_distribution, labels=gender_distribution.index, autopct='%1.1f%%', colors=['lightcoral', 'lightskyblue'])\n",
+    "axs[0].set_title('Purchases by Gender')\n",
+    "\n",
+    "# Age group distribution\n",
+    "axs[1].bar(age_group_distribution.index, age_group_distribution.values, color='mediumseagreen')\n",
+    "axs[1].set_title('Purchases by Age Group')\n",
+    "axs[1].set_xlabel('Age Group')\n",
+    "axs[1].set_ylabel('Number of Purchases')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Analyze membership length distribution\n",
+    "membership_summary = data['membership_length'].describe()\n",
+    "\n",
+    "gender_distribution, age_group_distribution, membership_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Product Categories & Departments Analysis\n",
+    "\n",
+    "# Grouping by department and category to analyze purchase trends\n",
+    "department_analysis = data.groupby('department')['gbp_value_of_item'].agg(['count', 'sum', 'mean']).sort_values(by='sum', ascending=False)\n",
+    "category_analysis = data.groupby('category')['gbp_value_of_item'].agg(['count', 'sum', 'mean']).sort_values(by='sum', ascending=False)\n",
+    "\n",
+    "# Display the results\n",
+    "department_analysis, category_analysis\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Purchase Patterns: High-Value Customers and Common Purchase Behaviors\n",
+    "\n",
+    "# Identifying high-value customers based on total spending\n",
+    "customer_spending = data.groupby('buyer_id')['gbp_value_of_item'].agg(['count', 'sum', 'mean']).sort_values(by='sum', ascending=False)\n",
+    "\n",
+    "# Calculating overall purchase frequency and average spending\n",
+    "overall_purchase_behavior = {\n",
+    "    'total_purchases': data['purchase_id'].count(),\n",
+    "    'total_customers': data['buyer_id'].nunique(),\n",
+    "    'average_purchases_per_customer': data.groupby('buyer_id')['purchase_id'].count().mean(),\n",
+    "    'average_spend_per_customer': customer_spending['sum'].mean(),\n",
+    "    'average_spend_per_purchase': data['gbp_value_of_item'].mean()\n",
+    "}\n",
+    "\n",
+    "# Displaying the top 10 high-value customers and the overall purchase behavior\n",
+    "high_value_customers = customer_spending.head(10)\n",
+    "high_value_customers, overall_purchase_behavior\n"
+   ]
   }
  ],
  "metadata": {
